--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@chakra-ui/icons": "1.0.15",
+    "@chakra-ui/react": "1.3.1",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.0.0",
+    "@types/react-router-dom": "5.1.8",
+    "axios": "0.21.1",
+    "framer-motion": "3.3.0-beta.22",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
